fixed icons, remoed page 2

--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="intro-overlay">
     <div class="center_box">
         <div class="zoom_text">
             <h1 class="zoom_top">Welcome, Good to see you!</h1>
             <h3 class="zoom_bottom">Scroll to get to know me</h3>
         </div>
     </div>
-    <div class="page_2">
-        <!-- <div class="nav-bar">
-            
-        </div> -->
 
+    <nav class="nav-bar">
+        <div class="nav-text">navbar</div>
+    </nav>
+  </div>
+
+  <main class="main-content">
         <div class="intro">
-            <h2 class="name-tag">Hi, I am <span class="my-name">Yaniv Ashwal</span></h2>
+            <h2 class="name-tag">Hi, I'm <span class="my-name">Yaniv Ashwal</span></h2>
             <div class="intro-info">
                 <div class="info-desc">A software Engineering Student</div>
                 <div class="info-edu-name">
@@ -68,19 +71,9 @@
         <div class="profile-pic-wrapper">
             <img src="images/cropped senior headshot.jpg" alt="headshot" class="profile-pic">
         </div>
-    </div> <!-- end of .page_2 -->
-
-    <!-- test scrollable content -->
-    <div class="scroll-test" style="padding:2rem; color:#fff;">
-      <h2>Scroll Test Area</h2>
-      <p>Line 1: If you can see this, scrolling is enabled.</p>
-      <p>Line 2: Keep scrolling…</p>
-      <p>Line 3: Testing scroll.</p>
-      <p>Line 4: Testing scroll.</p>
-      <p>Line 5: Testing scroll.</p>
-
-      <p>Line 20: End of test.</p>
     </div>
+    
+  </main>
 
     <script src="js/main.js"></script>
 </body>
