filler text for scroll insignificant css changes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,41 @@
         <div class="profile-pic-wrapper">
             <img src="images/cropped senior headshot.jpg" alt="headshot" class="profile-pic">
         </div>
+        
     </div>
+
+    <!-- Filler text section for scroll testing -->
+    <section class="filler-text">
+      <h2>Just Some More About Me</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus fermentum nulla ac mi vulputate, in varius dui sagittis. Donec vitae mi nec augue consequat vehicula.</p>
+      <p>Quisque sit amet turpis vitae magna consectetur tincidunt. Donec in ante non purus sodales tincidunt. Curabitur egestas orci non libero aliquet, at finibus elit placerat.</p>
+      <p>Morbi venenatis orci eu enim vulputate, a vulputate purus scelerisque. Sed euismod sem sed velit tristique, et commodo nisl aliquam. Vestibulum ante ipsum primis in faucibus.</p>
+      <p>Aenean a orci sed velit porttitor tincidunt. Integer dictum nulla sed erat cursus, eget aliquet risus cursus. Integer bibendum odio eu nulla tincidunt condimentum.</p>
+      <p>Fusce in libero sit amet odio dictum vestibulum. Vivamus suscipit, justo at lacinia ornare, justo sem faucibus metus, vitae dignissim lectus nisl quis eros.</p>
+    </section>
+
+    <!-- Even more filler, way down for extra scroll testing -->
+    <section class="filler-text">
+      <h2>Still More to Read</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet lacus a felis malesuada sollicitudin.</p>
+      <p>Nullam id dolor quis libero ultricies commodo. Aliquam erat volutpat. Vivamus sit amet justo non odio lacinia tristique.</p>
+      <p>Quisque vehicula urna ac metus fringilla, vitae congue purus interdum. Duis mattis tellus non augue hendrerit.</p>
+      <p>Sed condimentum mi vitae urna placerat, nec tempor arcu sagittis. Nulla facilisi. In hac habitasse platea dictumst.</p>
+      <p>Proin eu ex in orci interdum aliquet. Curabitur non odio at mauris convallis tristique at nec ipsum.</p>
+      <p>Morbi at lectus at justo tristique fringilla. Etiam pellentesque enim vitae turpis luctus, id vulputate mi viverra.</p>
+      <p>Vivamus sodales risus vitae ex hendrerit, nec consequat neque tempor. Nunc vel ex sit amet felis finibus molestie.</p>
+    </section>
+
+    <!-- Even further down for extra scrolling fun -->
+    <section class="filler-text">
+      <h2>Deep Scroll Zone</h2>
+      <p>Phasellus sit amet mi quis orci egestas tincidunt. Fusce nec turpis ac augue suscipit sodales.</p>
+      <p>Donec eleifend purus eget libero fermentum, in commodo orci cursus. Morbi elit tellus, mattis et felis sit amet, ultricies lobortis orci.</p>
+      <p>Cras in sapien a sapien facilisis consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+      <p>Etiam facilisis mauris sed augue vulputate luctus. Nunc vestibulum, metus vitae pulvinar pharetra, velit urna pellentesque urna, nec efficitur tortor nisl vitae felis.</p>
+      <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Integer varius orci ac dolor vehicula vulputate.</p>
+      <p>Aenean elementum, ipsum ut vulputate fermentum, orci dui cursus ex, at sodales mi lacus non augue.</p>
+    </section>
 
   </main>
 
