changing effects on nav bar

--- a/index.html
+++ b/index.html
@@ -16,26 +16,24 @@
 
   <main class="main-content">
         <nav class="nav-bar">
-            <a href="" class="nav-bar-btns">
-                Home
+            <a href="#" class="nav-bar-btns">
+                <span class="nav-bar-btns-text">Home</span>
             </a>
-            <a href="" class="nav-bar-btns">
-                Experience
+            <a href="#" class="nav-bar-btns">
+                <span class="nav-bar-btns-text">Experience</span>
             </a>
 
             <a href="projects.html" class="nav-bar-btns">
-                Projects
+                <span class="nav-bar-btns-text">Projects</span>
             </a>
 
             <a href="" class="nav-bar-btns">
-                About
+                <span class="nav-bar-btns-text">About</span>
             </a>
 
             <a href="" class="nav-bar-btns">
-                Contact Me
+                <span class="nav-bar-btns-text">Contact Me</span>
             </a>
-            
-            
         </nav>
 
         <div class="intro">
