change center buttons

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
         </div>
 
         <div class="switch-box">
-            <div class="experience-box">
-                Experience
-            </div>
-            <div class=" projects-box">
-                Projects
-            </div>
+            <button type=button class="experience-box">
+                <span class="center-btns">Experience</span>
+            </button>
+            <button type=button class=" projects-box">
+                <span class="center-btns">Projects</span>
+            </button>
         </div>
 
         <div class="profile-pic-wrapper">
