--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
   <main class="main-content">
         <nav class="nav-bar">
-            <a href="#" class="nav-bar-btns">
+            <a href="index.html" class="nav-bar-btns">
                 <span class="nav-bar-btns-text">Home</span>
             </a>
-            <a href="#" class="nav-bar-btns">
+            <a href="experience.html" class="nav-bar-btns">
                 <span class="nav-bar-btns-text">Experience</span>
             </a>
 
@@ -27,11 +27,11 @@
                 <span class="nav-bar-btns-text">Projects</span>
             </a>
 
-            <a href="" class="nav-bar-btns">
+            <a href="about.html" class="nav-bar-btns">
                 <span class="nav-bar-btns-text">About</span>
             </a>
 
-            <a href="" class="nav-bar-btns">
+            <a href="contactMe.html" class="nav-bar-btns">
                 <span class="nav-bar-btns-text">Contact Me</span>
             </a>
         </nav>
