--- a/about.html
+++ b/about.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>About</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/93cac59c88.js" crossorigin="anonymous"></script>
+    
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -33,5 +34,6 @@
             </a>
         </nav>
     </main>
+    
 </body>
 </html>
