--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="https://github.com/YanivAshwal" target="_blank" class="icon-btn circle" aria-label="My GitHub">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="www.linkedin.com/in/yaniv-ashwal/" target="_blank" class="icon-btn square" aria-label="My LinkedIn">
+                    <a href="https://www.linkedin.com/in/yaniv-ashwal/" target="_blank" class="icon-btn square" aria-label="My LinkedIn">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
                     <script>
