updating and organizing contact me page better

--- a/contactMe.html
+++ b/contactMe.html
@@ -59,27 +59,24 @@
                         </label>
                     </div>
 
-                    <button type="submit">Send</button>
+                    <button class="cntct-frm-btn" type="submit">Send</button>
                 </form>
             </div>
 
+            <div class="cntct-socials">
+                <div class="cntct-lbl-header">Or Check out my Socials</div>
 
-
-            <div class="cntct-icon-btns">
-                <div class="cntct-row">
-                    <div class="cntct-lbls">On Github   </div>
+                <div class="cntct-lbl-icns">
+                    <div class="cntct-lbls">Github   </div>
                     <a href="https://github.com/YanivAshwal" target="_blank" class="icon-btn circle" aria-label="My GitHub">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                </div>
-                <div class="cntct-row">
-                    <div class="cntct-lbls">On LinkedIn </div>
+
+                    <div class="cntct-lbls">LinkedIn </div>
                     <a href="https://www.linkedin.com/in/yaniv-ashwal/" target="_blank" class="icon-btn square" aria-label="My LinkedIn">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                </div>
-                <div class="cntct-row">
-                    <div class="cntct-lbls">Or by email </div>
+                    <div class="cntct-lbls">Or email </div>
                     <script>
                         // obfuscate to avoid spambots
                         const parts1 = ["yanivashwal28","gmail","com"];
