contact me page changes

--- a/contactMe.html
+++ b/contactMe.html
@@ -68,15 +68,15 @@
 
                 <div class="cntct-lbl-icns">
                     <div class="cntct-lbls">Github   </div>
-                    <a href="https://github.com/YanivAshwal" target="_blank" class="icon-btn circle" aria-label="My GitHub">
+                    <a href="https://github.com/YanivAshwal" target="_blank" class="cntct-icon-btn circle" aria-label="My GitHub">
                         <i class="fa-brands fa-github"></i>
                     </a>
 
                     <div class="cntct-lbls">LinkedIn </div>
-                    <a href="https://www.linkedin.com/in/yaniv-ashwal/" target="_blank" class="icon-btn square" aria-label="My LinkedIn">
+                    <a href="https://www.linkedin.com/in/yaniv-ashwal/" target="_blank" class="cntct-icon-btn square" aria-label="My LinkedIn">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                    <div class="cntct-lbls">Or email </div>
+                    <div class="cntct-lbls">Email </div>
                     <script>
                         // obfuscate to avoid spambots
                         const parts1 = ["yanivashwal28","gmail","com"];
@@ -84,7 +84,7 @@
                         document.write(
                             '<a href="mailto:' + email1 + '" ' +
                                 'target="_blank" ' +
-                                'class="icon-btn rect" ' +
+                                'class="cntct-icon-btn rect" ' +
                                 'aria-label="Email">' +
                             '<i class="fa-solid fa-envelope"></i>' +
                             '</a>'
